external-crates/move/crates/move-compiler/tests/move_check/expansion/pack_no_fields_single_block_expr.move
module 0x42::M {
    struct S { f: u64 }
    fun foo() {
        let _s = S { false };
        let _s = S { 0 };
    }
}
